Publishing to gh-pages (publish.sh)

--- a/slides/organize/nci-20191212/index.html
+++ b/slides/organize/nci-20191212/index.html
@@ -13,10 +13,10 @@ class: col-2
 - IRTA Fellow (NIDDK/NIH)
   - &lt;i class=&#34;fas fa-dna&#34;&gt;&lt;/i&gt; Genomics
   - &lt;i class=&#34;fas fa-project-diagram&#34;&gt;&lt;/i&gt; Gene Regulation
-  - &lt;img src=&#34;/images/drosophila-wt.jpg&#34; width=&#34;4%&#34;/&gt; Drosophila
+  - &lt;img src=&#34;/datascience_presentations/images/drosophila-wt.jpg&#34; width=&#34;4%&#34;/&gt; Drosophila
 
 - Contact:
-  - &lt;i class=&#34;fab fa-github&#34;&gt;&lt;/i&gt; @jfear
+  - &lt;i class=&#34;fab fa-github&#34;&gt;&lt;/i&gt; [@jfear](https://github.com/jfear)
   - &lt;i class=&#34;fas fa-envelope-open-text&#34;&gt;&lt;/i&gt; justin.fear@nih.gov
 
 &lt;!-- TODO Fix publication URL --&gt;
@@ -25,7 +25,7 @@ class: col-2
 
 ---
 class: title, smokescreen
-background-image: url(&#34;/images/organization.jpg&#34;)
+background-image: url(&#34;/datascience_presentations/images/organization.jpg&#34;)
 
 &lt;!-- ############################ Part 1 ############################ --&gt;
 # Why Project Organization
@@ -142,7 +142,7 @@ class: img-right, compact
 
 # Poor uses of folders
 
-![](/images/lots_o_files.png)
+![](/datascience_images/images/lots_o_files.png)
 
 - One folder to rule them all
 
@@ -206,7 +206,7 @@ class: img-left-full, compact
 
 # Tools of the trade (VCS)
 
-![](/images/git_commit.png)
+![](/datascience_images/images/git_commit.png)
 
 ## Version Control Software
 
@@ -225,7 +225,7 @@ class: img-right
 
 # Tools of the trade (Workflows)
 
-![](/images/rnaseq.png)
+![](/datascience_images/images/rnaseq.png)
 
 - Orchestrate analysis using workflow software
   - Galaxy
@@ -237,7 +237,7 @@ class: img-right
 
 # Project Folder Organization
 
-![](/images/example_folder.png)
+![](/datascience_images/images/example_folder.png)
 
 - Folder structure is personal preference
 - Folder names are personal preference
@@ -311,7 +311,7 @@ data # original and external
 ```
 ]
 
-![](/images/snakefile.png# absolute l-40pct t-0 h-100pct)
+![](/datascience_images/images/snakefile.png# absolute l-40pct t-0 h-100pct)
 
 ---
 .absolute.l-2.w-40pct[
@@ -331,7 +331,7 @@ src/    # project level package
 ```
 ]
 
-![](/images/modularize.png# absolute l-50pct t-0 w-50pct)
+![](/datascience_images/images/modularize.png# absolute l-50pct t-0 w-50pct)
 
 ---
 class: compact
@@ -525,7 +525,7 @@ Add as much information about your samples.
 ]
 ]
 
-![](/images/script_doc.png# absolute l-6-12th t-0 h-100pct)
+![](/datascience_images/images/script_doc.png# absolute l-6-12th t-0 h-100pct)
 
 ---
 # Functions and Classes
@@ -560,7 +560,7 @@ Add as much information about your samples.
 ]
 ]
 
-![](/images/jupyter.png# absolute l-6-12th t-0 w-50pct)
+![](/datascience_images/images/jupyter.png# absolute l-6-12th t-0 w-50pct)
 
 .footer[https://github.com/markusschanta/awesome-jupyter]
 
@@ -578,7 +578,7 @@ Add as much information about your samples.
     - **hugo**
 ]
 
-![](/images/blog.png# absolute l-6-12th t-0 w-50pct)
+![](/datascience_images/images/blog.png# absolute l-6-12th t-0 w-50pct)
 
 ---
 # 10 Best Practices
