--- a/slides/organize/nci-20191212/index.html
+++ b/slides/organize/nci-20191212/index.html
@@ -21,9 +21,8 @@ class: col-2
   - &lt;i class=&#34;fab fa-github&#34;&gt;&lt;/i&gt; [@jfear](https://github.com/jfear)
   - &lt;i class=&#34;fas fa-envelope-open-text&#34;&gt;&lt;/i&gt; justin.fear@nih.gov
 
-&lt;!-- TODO Fix publication URL --&gt;
 .qrcode.db.pa-3.w-90pct.ml-4[]
-&lt;http://talks.geneticsunderground.com&gt;
+&lt;http://geneticsunderground.com/talk&gt;
 
 ---
 class: title, smokescreen
@@ -220,6 +219,7 @@ class: compact
 .absolute.t-3-12th.l-4-12th[
 
 ### Data Is Different
+
 - git-lfs
 ]
 
@@ -237,6 +237,8 @@ class: img-caption
 .absolute.b-2.l-1[Make]
 .absolute.b-2.r-1[Airflow]
 
+.myheader[\&gt; Master Your Weapons]
+
 ---
 class: compact
 
@@ -253,9 +255,12 @@ class: compact
 - Remote development ove SSH
 
 ## Text Editors
+
 - vim
 - emacs
 - nano
+
+.myheader[\&gt; Master Your Weapons]
 
 ---
 class: compact
@@ -265,7 +270,7 @@ class: compact
 ![](/datascience_presentations/images/gigantum_notebook.png# w-60pct absolute r-2 t-0)
 ![](/datascience_presentations/images/gigantum.png# w-30pct absolute l-5-12th b-0)
 
-### Examples
+## Examples
 
 - VScode Online
 - Azure Notebooks
@@ -274,45 +279,60 @@ class: compact
 - CoCalc
 - Binder
 
-### Gigantum
+## Gigantum
 
 - Jupyter &#43; RStudio in the cloud
 - Container based environment
 - Automatic Version Control
 
+.myheader[\&gt; Master Your Weapons]
+
 ---
-class: img-right
+class: col-2, compact
 
-# Project Folder Organization
+# Project Organization
 
-![](/datascience_presentations/images/example_folder.png)
+## General best practices
 
-- Folder structure is personal preference
-- Folder names are personal preference
+- Folder Structure
+- Separate data from scripts
+- Use workflow tools to orchestrate
+- Split out configuration
+- Modularize
+- Use a defined style
+- Use containers and environments
+- Document everything
 
-## There are general .red[*best practices*]
+## Personal preferences
 
-.footer[[Example Project](https://github.com/jfear/example_project)]
+- Folder structure
+- Folder names
+
+[Example Project](https://github.com/jfear/example_project)
 
 ---
 
 .absolute.l-7-12th.w-40pct[
 
-# 1. Use the same folder structure and names across projects
+# 1. Same folder structure and names across projects
 
-## Don&#39;t be afraid to tweak
+## But, don&#39;t be afraid to tweak
+
 ]
 
 ![](/datascience_presentations/images/example_folder.png# absolute l-0 t-0 h-100pct)
 
+.myheader-right[\&gt; Project Organization]
+
 ---
 class: compact
 
-# 2. Separate original data, generated data, and scripts
+# 2. Separate data from code
 
-## .red[Not stored in version control]
+## .red[Data is NOT stored typically in version control]
 
 .fl.db.w-40pct[
+
 ```bash
 ├── data # original and external
 ├── lcdb-references # multi-project
@@ -332,12 +352,13 @@ class: compact
 ]
 
 .fr.db.w-55pct[
+
 ```bash
 data # original and external
 ├── external
 │   ├── DroID_DPiM_2018-03-29.txt # website
 │   ├── Ferrari_et_al_2006.tsv # paper
-│   ├── Ferrari_et_al_2006.readme # paper details 
+│   ├── Ferrari_et_al_2006.readme # paper details
 │   ├── FlyBase/ # community
 │   └── maria/ # collaborator
 ├── rnaseq_samples # our data
@@ -350,10 +371,12 @@ data # original and external
 
 ]
 
+.myheader[\&gt; Project Organization]
+
 ---
 .absolute.l-2.w-30pct[
 
-# 3. Uses workflows to orchestrate
+# 3. Workflow Orchestration
 
 ```bash
 ./example1-wf
@@ -363,14 +386,17 @@ data # original and external
 ├── scripts/
 └── Snakefile
 ```
+
 ]
 
 ![](/datascience_presentations/images/snakefile.png# absolute l-40pct t-0 h-100pct)
 
----
-.absolute.l-2.w-40pct[
+.myheader[\&gt; Project Organization]
 
-# 4. Modularize reusable code
+---
+class: compact
+
+# 4. Modularize code
 
 ```bash
 lcdb-wf@56c948d  #submodules
@@ -384,44 +410,42 @@ src/    # project level package
 │   └── test_stats.py
 └── setup.py
 ```
-]
 
 ![](/datascience_presentations/images/modularize.png# absolute l-50pct t-0 w-50pct)
+
+.myheader[\&gt; Project Organization]
 
 ---
 class: compact
 
 .absolute.l-2.w-40pct[
 
-# 5. Use a style guide and linters
+# 5. Style guides and linters
 
-* Consistent style improves readability
-* Just google my language and style guide
-* Linters catch syntax erros and point out style problems.
-    - `flake8   # python`
-    - `lintr    # R`
+- Consistent style improves readability
+- Google `my language` and style guide
+- Linters catch syntax errors and point out style problems.
+  - `pylint   # python`
+  - `lintr    # R`
 
-* Fix ugly code with software
-    - `black   # python`
-    - `styler   # R`
+- Fix ugly code with software
+  - `black   # python`
+  - `styler   # R`
 ]
 
 .fr.db.w-50pct[
+
+## Fix ugly code the easy way
+
 &lt;pre&gt;&lt;code class=&#34;R&#34; style=&#34;font-size: .9rem&#34;&gt;
 for (i in seq(10)) {
 for (j in seq(100)) {
-if (i == j) {
-print(TRUE)
-} else if (i %% j == 0) {
+if (i == j) {print(TRUE)} else if (i %% j == 0) {
 print(&#34;modulo&#34;)
-} else {
-print(FALSE)
-}
-}
-}
+} else {print(FALSE)}}}
 &lt;/code&gt;&lt;/pre&gt;
 
-&lt;pre&gt;&lt;code class=&#34;R&#34; style=&#34;font-size: .9rem&#34;&gt;
+&lt;pre&gt;&lt;code class=&#34;R&#34; style=&#34;font-size: 1rem&#34;&gt;
 for (i in seq(10)) {
   for (j in seq(100)) {
     if (i == j) {
@@ -436,12 +460,15 @@ for (i in seq(10)) {
 &lt;/code&gt;&lt;/pre&gt;
 ]
 
+.myheader[\&gt; Project Organization]
+
 ---
 class: compact
 
 # 6. Split out configuration for consistency
 
 .absolute.l-2.w-40pct[
+
 ```bash
 ./config   # Project config
     ├── common.yaml
@@ -454,6 +481,7 @@ class: compact
     │   └── sampletable.tsv
 
 ```
+
 ]
 
 .fr.db.w-50pct[
@@ -462,28 +490,31 @@ class: compact
 
 Contains info that is needed across the project.
 
-* Project name and github url
-* Assembly and Annotation
-* alpha level
+- Project name and github url
+- Assembly and Annotation
+- alpha level
 
 ## Workflow config
 
 Anything you may tweak in the future.
 
-* Various thresholds
-* Workflow specific references
-* Various Mappings (i.e. file name to title)
+- Various thresholds
+- Workflow specific references
+- Various Mappings (i.e. file name to title)
 
 ]
+
+.myheader[\&gt; Project Organization]
 
 ---
 class: fit-h1, compact
 
-# 7. Use containers and environments (portability and reproducibility)
+# 7. Containers and environments (portability and reproducibility)
 
-One of the hardest problems in data science is managing software.
+## .red[One of the hardest problems in data science is managing software.]
 
 .absolute.l-2.w-40pct[
+
 ```bash
 ./environment.yaml  # project env
 
@@ -492,24 +523,25 @@ One of the hardest problems in data science is managing software.
     ├── scrublet.yaml
     ├── seurat2.yaml
     └── seurat3.yaml
-
-
 ```
+
 ]
 
 .fr.db.w-50pct[
 
 ## Containers (Docker, Singularity)
 
-* Completely reproducible system
-    * Kernel and Software
+- Completely reproducible system
+  - Kernel and Software
 
 ## Environments (Conda, pipenv)
 
-* Install and manage software versions
-* Different versions of software can be installed in different environments
+- Install and manage software versions
+- Different versions of software can be installed in different environments
 
 ]
+
+.myheader[\&gt; Project Organization]
 
 ---
 class: title, smokescreen
@@ -524,35 +556,35 @@ background-image: url(https://www.mayerdan.com/assets/img/ring-binders.jpg)
 # What to document (Everything!)
 
 .ul-space[
-* How was the data generated
-* Record all &#34;experiments&#34;
+
+- How was the data generated
+- Record all &#34;experiments&#34;
 .red[
 - failed attempts
 - comparing different methods
 ]
-* Record the reasoning for any decision points
-* Clearly describe how to get final results
+- Record the reasoning for any decision points
+- Clearly describe how to get final results
+
 ]
 
 **6 months from now, your future-self will thank you!**
+
+.myheader[\&gt; Project Organization &gt; Documentation]
 
 ---
 
 # Where to document (Everywhere!)
 
-.ul-space[
-* Sample/Resource Table
-* README
-* Top of scripts
-* Function/Class Docstrings
-* Code comments (but not too many)
-* Literate Programming (i.e. notebooks)
-* Project Blog
-]
+- Sample/Resource Table
+- README
+- Top of scripts
+- Function/Class Docstrings
+- Code comments (but not too many)
+- Literate Programming (i.e. notebooks)
+- Project Blog
 
----
-layout: true
-.myheader[\&gt;Where to document]
+.myheader[\&gt; Project Organization &gt; Documentation]
 
 ---
 class: compact
@@ -573,39 +605,49 @@ class: compact
 
 Add as much information about your samples.
 
+.myheader[\&gt; Project Organization &gt; Documentation &gt; Where]
+
 ---
+class: compact
 
 # Top of Scripts
 
-.fl.db.w-50pct[
-.ul-space[
-* Describe what the script does
-* Any major decisions that you made
-* Anything to help you remember
-]
+.w-50pct[
+
+- Describe what the script does
+- Any major decisions that you made
+- Anything to help you remember
+
 ]
 
 ![](/datascience_presentations/images/script_doc.png# absolute l-6-12th t-0 h-100pct)
 
+.myheader[\&gt; Project Organization &gt; Documentation &gt; Where]
+
 ---
+class: compact
 
 # Functions and Classes
 
 .fl.db.w-50pct[
-.ul-space[
-* Any function you will call from another script.
-* Add type hints if it is confusing what goes in.
-* Add examples to clearly show what the function does.
-]
+
+- Any function you will call from another script.
+- Add type hints if it is confusing what goes in.
+- Add examples to clearly show what the function does.
+
 ]
 
-![](modularize.png# absolute l-6-12th t-0 w-50pct)
+![](/datascience_presentations/images/modularize.png# absolute l-6-12th t-0 w-50pct)
+
+.myheader[\&gt; Project Organization &gt; Documentation &gt; Where]
 
 ---
+class: compact
 
 # Literate Programming
 
 .fl.db.w-50pct[
+
 ```bash
 ./notebook
     ├── 2019-08-01_bulk_deg.Rmd
@@ -616,32 +658,33 @@ Add as much information about your samples.
     └── permutation_summary.ipynb
 ```
 
-.ul-space[
-* Jupyter Notebooks
-* R Notebooks and Rmarkdown
-]
+- Jupyter Notebooks
+- R Notebooks and Rmarkdown
+
 ]
 
 ![](/datascience_presentations/images/jupyter.png# absolute l-6-12th t-0 w-50pct)
 
+.myheader[\&gt; Project Organization &gt; Documentation &gt; Where]
 .footer[https://github.com/markusschanta/awesome-jupyter]
 
 ---
+class: compact
 
 # Dedicated Project Blog
 
-.ul-space[
-* Aggregate notebooks
-    - `bookdown  # R`
-    - `jupyter webbook  # python`
-* Various static site generators
-    - Pelican
-    - Nikola
-    - jekyll
-    - **hugo**
-]
+- Aggregate notebooks
+  - `bookdown  # R`
+  - `jupyter webbook  # python`
+- Static site generators
+  - Pelican
+  - Nikola
+  - jekyll
+  - **hugo**
 
 ![](/datascience_presentations/images/blog.png# absolute l-6-12th t-0 w-50pct)
+
+.myheader[\&gt; Project Organization &gt; Documentation &gt; Where]
 
 ---
 
@@ -657,25 +700,35 @@ Add as much information about your samples.
 &lt;li&gt;Use containers and environments&lt;/li&gt;
 &lt;li style=&#34;font-size: 1em;&#34;&gt;Document as you go&lt;/li&gt;
 &lt;li style=&#34;font-size: 1.2em;&#34;&gt;Document as you go&lt;/li&gt;
-&lt;li style=&#34;font-size: 1.6em; font-weigth: bold&#34;&gt;Document as you go!&lt;/li&gt;
+&lt;li style=&#34;font-size: 1.6em; font-weight: bold&#34;&gt;Document as you go!&lt;/li&gt;
 &lt;/ol&gt;
 
 ---
-class: title, fogscreen
-background-image: url(http://www.paautism.org/LinkClick.aspx?fileticket=A1L9cYFyoTg%3D&amp;tabid=101&amp;portalid=0&amp;mid=771&amp;language=en-US)
 
-# Resources
+# Links and Examples
 
----
-layout: true
+.fl.w-50pct[
 
----
-.myheader[\&gt;Resources]
-* Cookiecutter
-* Github
-* Bitbucket
-* Snakemake
-* Data Science git-flow
+## Mine
+
+- [Example Project](https://github.com/jfear/example_project)
+- [scRNASeq Project](https://github.com/jfear/larval_gonad)
+- [Large Remapping Project](https://github.com/jfear/ncbi_remap)
+- [PacBio Project](https://github.com/jfear/dmel_pacbio)
+
+]
+
+.fr.w-50pct[
+
+## Others
+
+- [Cookiecutter Example](https://drivendata.github.io/cookiecutter-data-science/)
+- [Summary of Nobel Paper](https://davetang.org/muse/2018/02/09/organising-computational-biology-projects-cookiecutter/)
+- [Updated concepts Nobel paper](https://medium.com/outlier-bio-blog/a-quick-guide-to-organizing-data-science-projects-updated-for-2016-4cbb1e6dac71)
+- [Short Blog Post](https://towardsdatascience.com/manage-your-data-science-project-structure-in-early-stage-95f91d4d0600)
+- [Short Blog Post](https://www.thinkingondata.com/how-to-organize-data-science-projects/)
+
+]
 </textarea>
 <script type=text/javascript src=http://geneticsunderground.com/datascience_presentations/js/qrcode.js></script><script src=http://geneticsunderground.com/datascience_presentations/js/remark.js></script><script src=http://geneticsunderground.com/datascience_presentations/js/remark-zoom.js></script><script>var slideshow=remark.create({ratio:"16:9",navigation:{scroll:false},countIncrementalSlides:false,slideNumberFormat:'%current%',highlightLanguage:"xaprb",placeholder:"dummy value to end the list without a comma"});$(".remark-slide-content.fit-h1 h1").each(function(i,e){var $e=$(e);var $p=$e.closest('div.remark-slide-container');var needsToggle=!$p.hasClass('remark-visible');if(needsToggle)$p.toggleClass('remark-visible');while(e.scrollHeight>e.clientHeight+1&&$e.css('font-size')!='1px'){$e.css('font-size',(parseInt($e.css('font-size'))-1)+"px");}
 if(needsToggle)$p.toggleClass('remark-visible');});$(function(){if($("body.feature-qrcode:not(.feature-noqrcode)").length){if($(".qrcode").length){new QRCode($(".qrcode")[0],{"useSVG":true,"text":window.location.href.replace(/#\d*$/,"")});}}});</script></main></body></html>
